--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,10 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
 
-script: make FC=gfortran-5
+install: make FC=gfortran-5
+
+script:
+  - ./parseargs
+  - ./parseargs 4 5
+  - ./parseargs i=4 j=5
+  - ./parseargs j=4 i=5
