run tests inside valgrind

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
     packages:
       - gfortran-5
       - gfortran-6
+      - valgrind
     sources:
       - ubuntu-toolchain-r-test
 
@@ -21,6 +22,7 @@ install: make
 
 script:
   - ./parseargs
-  - ./parseargs 4 5
-  - ./parseargs i=4 j=5
-  - ./parseargs j=4 i=5
+  - valgrind --error-exitcode=1 --leak-check=full ./parseargs
+  - valgrind --error-exitcode=1 --leak-check=full ./parseargs 4 5
+  - valgrind --error-exitcode=1 --leak-check=full ./parseargs i=4 j=5
+  - valgrind --error-exitcode=1 --leak-check=full ./parseargs j=4 i=5
